[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/aggro/aggro.gd" type="Script" id=1]
[ext_resource path="res://waypoint.gd" type="Script" id=2]
[ext_resource path="res://external/aseprite/wall_01.png" type="Texture" id=3]
[ext_resource path="res://external/sunvox/ding.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[node name="waypoint" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -36 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
rotation = 0.785398
shape = SubResource( 2 )

[node name="aggro_raycast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 9

[node name="aggro" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8
script = ExtResource( 1 )
raycast_path = NodePath("../aggro_raycast")

[node name="collision_shape_2d" type="CollisionShape2D" parent="aggro"]
shape = SubResource( 3 )

[node name="checkpoint_ding" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="tween" type="Tween" parent="."]
[connection signal="aggro" from="aggro" to="." method="_on_aggro_aggro"]
